--- a/connect-to-perform.html
+++ b/connect-to-perform.html
@@ -5,7 +5,7 @@ title: Hoe wij werken
 
 <main>
   {% include button-omhoog.html %}
-  <div class="landing landing--red bg-rood">
+  <div class="landing landing--lightblue bg-lightblue">
     <div class="innercontainer innercontainer--werken-bij">
       <div class="landing-content">
         <h1>{{site.data.connect-to-perform.title}}</h1>
@@ -19,7 +19,8 @@ title: Hoe wij werken
         src="{{site.data.connect-to-perform.pagina-afbeelding}}"
         alt=""
       />
-      {% include svg1-red.html %} {% include svg1-desktop-red.html %}
+      {% include svg1-lightblue.html %} {% include svg1-desktop-lightblue.html
+      %}
     </div>
   </div>
   <div class="connect">
