--- a/wat-wij-doen.html
+++ b/wat-wij-doen.html
@@ -5,7 +5,9 @@ title: Wat wij doen
 
 <main>
   {% include button-omhoog.html %}
-  <div class="watwijdoen padding-top-large blue-shadow">
+  <div
+    class="watwijdoen watwijdoen-lightblue padding-top-large wat-wij-doen lightblue-shadow bg-lightblue"
+  >
     <h2>{{site.data.home.wat-wij-doen}}</h2>
     {{site.data.home.wat-wij-doen-tekst | markdownify}}
   </div>
