--- a/werken-bij.html
+++ b/werken-bij.html
@@ -5,8 +5,8 @@ title: Werken bij
 
 <main>
   {% include button-omhoog.html %}
-  <div class="landing landing--yellow bg-geel">
-    <div class="innercontainer innercontainer--werken-bij">
+  <div class="landing landing--red bg-rood">
+    <div class="innercontainer innercontainer--werken-bij bg-red">
       <div class="landing-content">
         <h1>{{site.data.werken-bij-ons.title}}</h1>
         {{site.data.werken-bij-ons.landing-tekst | markdownify}}
@@ -19,7 +19,7 @@ title: Werken bij
         src="{{site.data.werken-bij-ons.pagina-afbeelding}}"
         alt=""
       />
-      {% include svg1-yellow.html %} {% include svg1-desktop-yellow.html %}
+      {% include svg1-red.html %} {% include svg1-desktop-red.html %}
     </div>
   </div>
   <div class="innercontainer--werken-bij">
