--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Human Connection
 <main>
   {% include button-omhoog.html %}
   <div class="landing">
-    <div class="innercontainer border-left-green">
+    <div class="innercontainer border-left-green landing-flex">
       <div class="landing-content">
         <h1>{{site.data.home.slogan}}</h1>
         {{site.data.home.landing-tekt | markdownify}}
