--- a/wat-wij-doen.html
+++ b/wat-wij-doen.html
@@ -11,7 +11,7 @@ title: Wat wij doen
     <h2>{{site.data.home.wat-wij-doen}}</h2>
     {{site.data.home.wat-wij-doen-tekst | markdownify}}
   </div>
-  <div class="watwijdoenopsomming">
+  <div id="watwijdoenpagina" class="watwijdoenopsomming bg-lightestblue">
     <div class="innercontainer">
       <div class="wwd-grid">
         <div>
