--- a/ctp-contact.html
+++ b/ctp-contact.html
@@ -87,9 +87,9 @@ title: Meld je aan
         </div>
 
         <fieldset class="did-floating-label-content margin-bottom-1em">
-          <legend class="did-floating-label">
+          <p class="did-floating-label relative">
             {{site.data.ctp-contact.welke}}
-          </legend>
+          </p>
           <div>
             {% for datum in site.data.ctp-contact.data %}
             <div class="flex-radio">
