--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ title: Human Connection
           {{site.data.home.wat-wij-doen-1-tekst | markdownify}}
           {{site.data.home.wat-wij-doen-1-contact | markdownify}}
           <p class="btn btn-outline">
-            <a href="/team/sjef-van-gool/"
+            <a href="{{site.data.home.wat-wij-doen-1-link}}"
               >{{site.data.home.wat-wij-doen-1-button}}</a
             >
           </p>
@@ -69,7 +69,7 @@ title: Human Connection
           {{site.data.home.wat-wij-doen-2-tekst | markdownify}}
           {{site.data.home.wat-wij-doen-2-contact | markdownify}}
           <p class="btn btn-outline">
-            <a href="/team/meggie-van-de-bunt/"
+            <a href="{{site.data.home.wat-wij-doen-1-link}}"
               >{{site.data.home.wat-wij-doen-2-button}}</a
             >
           </p>
@@ -79,7 +79,7 @@ title: Human Connection
           {{site.data.home.wat-wij-doen-3-tekst | markdownify}}
           {{site.data.home.wat-wij-doen-3-contact | markdownify}}
           <p class="btn btn-outline">
-            <a href="/team/marit-weiss/"
+            <a href="{{site.data.home.wat-wij-doen-1-link}}"
               >{{site.data.home.wat-wij-doen-3-button}}</a
             >
           </p>
