--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ title: Human Connection
                 cols="50"
                 class="did-floating-input"
                 name="bericht"
-                placeholder="Jouw antwoord:"
+                placeholder="Jouw antwoord"
               ></textarea>
               <label class="did-floating-label">Vraag/Bericht*</label>
             </div>
