added possibility to have link or not

--- a/connect-to-perform.html
+++ b/connect-to-perform.html
@@ -43,7 +43,7 @@ title: Connect to perform
       </h3>
       {{site.data.connect-to-perform.werkvorm-tekst | markdownify}}
       <p class="btn btn-full margin-bottom-1em block max-content margin-top-2">
-        <a href="{{site.data.home.actievraag-button}}"
+        <a href="{{site.data.connect-to-perform.more-info}}" target="_blank"
           >{{site.data.connect-to-perform.button1}}</a
         >
       </p>
