--- a/ctp-contact.html
+++ b/ctp-contact.html
@@ -126,7 +126,7 @@ title: Meld je aan
             >{{site.data.ctp-contact.reden}}</label
           >
         </div>
-        <fieldset
+        <!-- <fieldset
           class="did-floating-label-content margin-bottom-1em informeer"
         >
           <legend class="did-floating-label">
@@ -153,7 +153,7 @@ title: Meld je aan
               <label for="contactChoice2">Nee</label>
             </div>
           </div>
-        </fieldset>
+        </fieldset> -->
         <!-- <p>*Vereist</p> -->
         <div class="flex space-between">
           <button type="submit" class="btn btn-full btn-left margin-top-1">
