added success page

--- a/ctp-contact.html
+++ b/ctp-contact.html
@@ -28,7 +28,7 @@ title: Meld je aan
       <h2 class="margin-top-2">{{site.data.ctp-contact.aanmelding-title}}</h2>
       <p class="zoom fs-20px">{{site.data.ctp-contact.aanmelding-zoom}}</p>
       <p class="fs-16-px">{{site.data.ctp-contact.aanmelding-tekst}}</p>
-      <form name="connect to perform inschrijving" netlify>
+      <form name="connect to perform inschrijving" netlify action="/succes">
         <div class="did-floating-label-content">
           <input
             class="did-floating-input"
