--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ title: Human Connection
       <div class="contact-flex">
         <div class="contact-left">
           <p>{{site.data.home.contact-omschrijving}}</p>
-          <form name="contact" netlify>
+          <form name="contact" netlify action="/succes">
             <div class="did-floating-label-content">
               <input
                 class="did-floating-input"
