--- a/succes.html
+++ b/succes.html
@@ -7,6 +7,7 @@ title: Contact
   <div class="contact">
     <div class="innercontainer">
       <h2 class="margin-top-4">{{site.data.ctp-contact.success}}</h2>
+      <p>{{site.data.ctp-contact.success-text}}</p>
       <p class="btn btn-full margin-top-2 margin-bottom-4">
         <a href="/">{{site.data.ctp-contact.button-terug}}</a>
       </p>
