--- a/wat-wij-doen.html
+++ b/wat-wij-doen.html
@@ -19,7 +19,7 @@ title: Wat wij doen
           {{site.data.home.wat-wij-doen-1-tekst | markdownify}}
           {{site.data.home.wat-wij-doen-1-contact | markdownify}}
           <p class="btn btn-outline">
-            <a href="/team/sjef-van-gool/"
+            <a href="{{site.data.home.wat-wij-doen-1-link}}"
               >{{site.data.home.wat-wij-doen-1-button}}</a
             >
           </p>
@@ -29,7 +29,7 @@ title: Wat wij doen
           {{site.data.home.wat-wij-doen-2-tekst | markdownify}}
           {{site.data.home.wat-wij-doen-2-contact | markdownify}}
           <p class="btn btn-outline">
-            <a href="/team/meggie-van-de-bunt/"
+            <a href="{{site.data.home.wat-wij-doen-2-link}}"
               >{{site.data.home.wat-wij-doen-2-button}}</a
             >
           </p>
@@ -39,7 +39,7 @@ title: Wat wij doen
           {{site.data.home.wat-wij-doen-3-tekst | markdownify}}
           {{site.data.home.wat-wij-doen-3-contact | markdownify}}
           <p class="btn btn-outline">
-            <a href="/team/marit-weiss/"
+            <a href="{{site.data.home.wat-wij-doen-3-link}}"
               >{{site.data.home.wat-wij-doen-3-button}}</a
             >
           </p>
