--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Human Connection
     </div>
 
     <div class="img-overlay-wrap">
-      {% include birthday.html %}
+      {# {% include birthday.html %} #}
       <img
         class="landing-image"
         src="{{site.data.home.pagina-afbeelding}}"
